--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 minlength="2"
                 maxlength="40"
                 required
-                name="nombre"
+                name="name"
               />
               <input
                 id="aboutMe-input"
@@ -49,7 +49,7 @@
                 minlength="2"
                 maxlength="200"
                 required
-                name="job"
+                name="about"
               />
               <input
                 class="popup__submit popup__submit_perfil"
@@ -86,7 +86,7 @@
             <div class="profile__avatar">
               <img
                 class="profile__imagen"
-                src="<%=require('../src/images/profile.jpg')%>"
+                src=""
                 alt="Jacques Cousteau"
               />
               <div class="profile__overlay">
@@ -100,7 +100,7 @@
 
             <div class="profile__info">
               <div class="profile__contenedor-titulo">
-                <h1 class="profile__title">Jacques Cousteau</h1>
+                <h1 class="profile__title"></h1>
                 <button type="button" class="edit-button">
                   <img
                     src="<%=require('../src/images/Edit-Button.svg')%>"
@@ -108,7 +108,7 @@
                   />
                 </button>
               </div>
-              <p class="profile__subtitle">Explorador</p>
+              <p class="profile__subtitle"></p>
             </div>
           </div>
 
