--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                     class="card__imagen-corazon card__imagen-corazon_solid"
                   />
                 </div>
-                <span class="card__like-counter">1</span>
+                <span class="card__likes card__like-counter">1</span>
               </div>
               <i class="fa-solid fa-trash card__trash"></i>
             </li>
