imagen corazon cambiado a un solo corazon

--- a/src/index.html
+++ b/src/index.html
@@ -166,16 +166,7 @@
               <div class="card__contenido">
                 <div class="card__info">
                   <p class="card__title"></p>
-                  <img
-                    src="<%=require('../src/images/me_gusta.svg')%>"
-                    alt="imagen corazon"
-                    class="card__imagen-corazon"
-                  />
-                  <img
-                    src="<%=require('../src/images/me_gusta_negro.svg')%>"
-                    alt="imagen corazon"
-                    class="card__imagen-corazon card__imagen-corazon_solid"
-                  />
+                  <div class="card__imagen-corazon"></div>
                 </div>
                 <span class="card__likes card__like-counter">1</span>
               </div>
