ajuste card a reglas de BRM

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
               <div class="card__contenido">
                 <div class="card__info">
                   <p class="card__title"></p>
-                  <div class="card__imagen-corazon"></div>
+                  <div class="card_dislike"></div>
                 </div>
                 <span class="card__likes card__like-counter">1</span>
               </div>
