fixed alt name in perfil

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
               <img
                 class="profile__imagen"
                 src=""
-                alt="Jacques Cousteau"
+                alt=""
               />
               <div class="profile__overlay">
                 <img
