experiencia de usuario en botones

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
               <input
                 class="popup__submit popup__submit_perfil"
                 type="submit"
-                value="Modificar"
+                value="Guardar"
               />
             </form>
           </section>
@@ -84,11 +84,7 @@
 
           <div class="profile__data">
             <div class="profile__avatar">
-              <img
-                class="profile__imagen"
-                src=""
-                alt=""
-              />
+              <img class="profile__imagen" src="" alt="" />
               <div class="profile__overlay">
                 <img
                   class="profile__edit-icon"
