--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 
           <div class="profile__data">
             <div class="profile__avatar">
-              <img class="profile__imagen" src="" alt="" />
+              <img class="profile__imagen" src="<%=require('./images/profile.jpg')%>" alt="Imagen de perfil" />
               <div class="profile__overlay">
                 <img
                   class="profile__edit-icon"
