--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <div class="page">
       <header class="header">
         <img
-        class="logo"
-        src="<%=require('../src/images/logo.svg')%>"
-        alt="Logo around the US"
+          class="logo"
+          src="<%=require('../src/images/logo.svg')%>"
+          alt="Logo around the US"
         />
       </header>
       <div class="error"></div>
@@ -68,7 +68,6 @@
               />
               <h2 class="popup__title">Cambiar foto de perfil</h2>
               <input
-                id="url-input"
                 class="popup__input popup__input-link"
                 type="url"
                 placeholder="Enlace a la Imagen"
@@ -85,7 +84,11 @@
 
           <div class="profile__data">
             <div class="profile__avatar">
-              <img class="profile__imagen" src="<%=require('./images/profile.jpg')%>" alt="Imagen de perfil" />
+              <img
+                class="profile__imagen"
+                src="<%=require('./images/profile.jpg')%>"
+                alt="Imagen de perfil"
+              />
               <div class="profile__overlay">
                 <img
                   class="profile__edit-icon"
@@ -108,16 +111,15 @@
               <p class="profile__subtitle"></p>
             </div>
           </div>
-          
+
           <div class="profile__button">
             <img
-            class="add-button"
-            src="<%=require('../src/images/Add Button.png')%>"
-            alt="icono boton agregar"
+              class="add-button"
+              src="<%=require('../src/images/Add Button.png')%>"
+              alt="icono boton agregar"
             />
           </div>
         </section>
-
 
         <section>
           <section class="popup popup_Element">
@@ -154,9 +156,7 @@
             </form>
           </section>
 
-          <ul class="elements">
-
-          </ul>
+          <ul class="elements"></ul>
 
           <template class="template-card">
             <li class="card">
